fix: issue with add button not render properly on firefox browser - removed unnecessary imports - addQubitActionBtn style classname

--- a/src/components/CircuitBuilder/CircuitArrangement/Qubits/Qubit/Qubit.module.scss
+++ b/src/components/CircuitBuilder/CircuitArrangement/Qubits/Qubit/Qubit.module.scss
@@ -9,6 +9,9 @@
     stroke-linecap: square;
   }
 
+  .addQubitActionBtn {
+  }
+
 
 }
 
